--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
         <div class="row">
             <div class="col-4">
                <div class="row mb-3">
-                   <img class="img-fluid" src="images/battol-img1.jpg" alt="">
+                   <img class="img-fluid" src="images/collage/battol-img1.jpg" alt="">
                </div> 
                <div class="row">
-                   <img src="images/stool-img2.jpg" alt="">
+                   <img src="images/collage/stool-img2.jpg" alt="">
                </div>
             </div>
             <div class="col-4">
                 <div class="row mb-3">
-                    <img class="img-fluid" src="images/coffee-img3.jpg" alt="">
+                    <img class="img-fluid" src="images/collage/coffee-img3.jpg" alt="">
                 </div>
                 <div class="row mb-3">
-                    <img src="images/lamp-img4.jpg" alt="">
+                    <img src="images/collage/lamp-img4.jpg" alt="">
                 </div>
                 <div class="row mb-3">
-                    <img src="images/watch-img5.jpg" alt="">
+                    <img src="images/collage/watch-img5.jpg" alt="">
                 </div>
                 <div class="row mb-3">
-                    <img src="images/honey-img6.jpg" alt="">
+                    <img src="images/collage/honey-img6.jpg" alt="">
                 </div>
             </div>
             
             <div class="col-4">
                 <div class="row">
                     <div class="row mb-3">
-                        <img src="images/cactus-img7.jpg" alt="">
+                        <img src="images/collage/cactus-img7.jpg" alt="">
                     </div>
                     <div class="row mb-3">
-                        <img src="images/sunglass-img8.jpg" alt="">
+                        <img src="images/collage/sunglass-img8.jpg" alt="">
                     </div>
                     <div class="row mb-3">
-                        <img src="images/lens.jpg" alt="">
+                        <img src="images/collage/lens.jpg" alt="">
                     </div>
                 </div>
             </div>
