--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <header class="container">
+        <a class="btn btn-danger" href="#" role="button">Home</a>
+        <a class="btn btn-danger" href="vacation.html" role="button">Vacation</a>
+    </header>
     <!-- image container -->
     <section class="container my-5">
         <div class="row">
